--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -4,6 +4,6 @@ RUN mkdir -p /opt/app
 WORKDIR /opt/app
 COPY main.py /opt/app
 COPY requirements.txt /opt/app/
-RUN pip3 install -r /opt/app/requirements.txt
+RUN python3 -m pip install -r /opt/app/requirements.txt
 EXPOSE 5000
 CMD ["python3", "/opt/app/main.py"]
